add framework for user input

--- a/views/home.erb
+++ b/views/home.erb
@@ -3,12 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Places</title>
-
   </head>
   <body>
     <div class="jumbotron">
       <h2>Places I've been</h2>
     </div>
-    <p>testing</p>
+    <form action="/book" method="post">
+      <div class="form-group">
+        <label class="form-control-label" for="user_input">Name of the place have you been?</label>
+        <input type="text" class="form-control" id="user_input" name="user_input">
+      </div>
+      <div class="form-group">
+        <label class="form-control-label" for="user_input">Where was this?</label>
+        <input type="text" class="form-control" id="user_input" name="user_input">
+      </div>
+      <button type="submit" class="btn user_button">Okay</button>
+    </form>
   </body>
 </html>
