direct user input to other page

--- a/views/home.erb
+++ b/views/home.erb
@@ -11,11 +11,11 @@
     <form action="/book" method="post">
       <div class="form-group">
         <label class="form-control-label" for="user_input">Name of the place have you been?</label>
-        <input type="text" class="form-control" id="user_input" name="user_input">
+        <input type="text" class="form-control" id="user_input" name="user_input_name">
       </div>
       <div class="form-group">
         <label class="form-control-label" for="user_input">Where was this?</label>
-        <input type="text" class="form-control" id="user_input" name="user_input">
+        <input type="text" class="form-control" id="user_input" name="user_input_location">
       </div>
       <button type="submit" class="btn user_button">Okay</button>
     </form>
