--- a/views/book.erb
+++ b/views/book.erb
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <p><%= @place_name %>, <%= @place_loaction %></p>
+    <p><%= @names %></p>
   </body>
 </html>
