user can submit data without moving to other page

--- a/views/book.erb
+++ b/views/book.erb
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
-    <p><%= @names %></p>
+    <p><%= @names[0].name + ", " + @names[0].location %></p>
+
   </body>
 </html>
