--- a/views/book.erb
+++ b/views/book.erb
@@ -5,7 +5,9 @@
     <title></title>
   </head>
   <body>
-    <p><%= @names[0].name + ", " + @names[0].location %></p>
+    <% @names.each do |item| %>
+    <p><%= item.name + ", " + item.location %></p>
+    <% end %>
 
   </body>
 </html>
