--- a/views/home.erb
+++ b/views/home.erb
@@ -21,8 +21,8 @@
       <button type="submit" class="btn user_button">Okay</button>
     </form>
     <br>
-    <form action="/book" method="get">
-      <button type="submit" class="btn user_button">Go to book</button>
+    <form action="/places" method="get">
+      <button type="submit" class="btn user_button">Go to list</button>
     </form>
   </body>
 </html>
