--- a/views/places.erb
+++ b/views/places.erb
@@ -5,8 +5,8 @@
     <title></title>
   </head>
   <body>
-    <% @names.each do |item| %>
-    <p><%= item.name + ", " + item.location %></p>
+    <% @places.each do |place| %>
+    <p><%= place.name + ", " + place.location %></p>
     <% end %>
 
   </body>
