add button to sort places alphabetically

--- a/views/places.erb
+++ b/views/places.erb
@@ -9,6 +9,8 @@
     <p><%= place.name + ", " + place.location %></p>
     <% end %>
 
-    
+    <form action="/places" method="post">
+      <button type="submit" class="btn user_button">Sort Alphabetically</button>
+    </form>
   </body>
 </html>
