--- a/views/home.erb
+++ b/views/home.erb
@@ -1,28 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Places</title>
-  </head>
 
-    <div class="jumbotron">
-      <h2>Places I've been</h2>
-    </div>
 
-    <form method="post">
-      <div class="form-group">
-        <label class="form-control-label" for="user_input_name">Name of the place have you been?</label>
-        <input type="text" class="form-control" id="user_input" name="user_input_name">
-      </div>
-      <div class="form-group">
-        <label class="form-control-label" for="user_input_location">Where was this?</label>
-        <input type="text" class="form-control" id="user_input" name="user_input_location">
-      </div>
-      <button type="submit" class="btn user_button">Okay</button>
-    </form>
-    <br>
-    <form action="/places" method="get">
-      <button type="submit" class="btn user_button">Go to list</button>
-    </form>
+<div class="panel">
+  <p>Places I've been</p>
+</div>
 
-</html>
+<form method="post">
+  <div class="form-group">
+    <label class="form-control-label" for="user_input_name">Name of the place have you been?</label>
+    <input type="text" class="form-control" id="user_input" name="user_input_name">
+  </div>
+  <div class="form-group">
+    <label class="form-control-label" for="user_input_location">Where was this?</label>
+    <input type="text" class="form-control" id="user_input" name="user_input_location">
+  </div>
+  <button type="submit" class="btn user_button">Okay</button>
+</form>
+<br>
+<form action="/places" method="get">
+  <button type="submit" class="btn user_button">Go to list</button>
+</form>
