--- a/views/places.erb
+++ b/views/places.erb
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div class="well">
+<div class="well">
+  <% @places.each do |place| %>
+  <p><%= "- " + place.name + ", " + place.location %></p>
+  <% end %>
+</div>
 
-    <% @places.each do |place| %>
-    <p><%= place.name + ", " + place.location %></p>
-    <% end %>
-  </div>
-
-    <form action="/places" method="post">
-      <button type="submit" class="btn user_button">Sort Alphabetically</button>
-    </form>
-  </body>
-</html>
+<form action="/places" method="post">
+  <button type="submit" class="btn user_button">Sort Alphabetically</button>
+</form>
+<br>
+<form action="/">
+  <button type="submit" class="btn user_button">Back to Home</button>
+</form>
